--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
+    "axios": "^1.5.1",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "^6.0.8"
+    "react-hook-form": "^7.9.0",
+    "styled-components": "^6.0.8",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^20",
