chore: setting up environment for tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,5 +32,7 @@
   ],
   "exclude": [
     "node_modules"
-  ]
+  ],
+  "types": ["jest"],
+  "typeRoots": ["./src/types", "node_modules/@types"],
 }
